Fix overlap on webstore extensions icon in hidpi
Previously, when the device scale factor >= 1.5, selects the 2x
resource, but then scales it by the DSF. So, for example, at 1.5,
it selects 64x64, and draws it as 96x96 pixels, which causes it to
overlap. Setting the size explicitly seems to fix it, but I'm not
sure if this is the right fix.

R=kalman@chromium.org
BUG=366377
TEST=manual with --force-device-scale-factor={1,1.25,1.5,2}

Review URL: https://codereview.chromium.org/343473003

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@278325 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 8bc8a51e48c016b1ce712841fe6dde479c0483be

--- a/chrome/browser/resources/extensions/extensions.css
+++ b/chrome/browser/resources/extensions/extensions.css
@@ -153,6 +153,7 @@ html:not(.focus-outline-visible)
 
 #footer-section {
   background: url(chrome://theme/IDR_WEBSTORE_ICON_32) no-repeat left center;
+  background-size: 32px 32px;
   font-size: 1.25em;
 }
 
